--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 */
 body{
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #1276af;
+  background-color: #979797;
 }
 
 .menu{
@@ -25,7 +25,7 @@ body{
   display: flex;
   justify-content:space-around;
   align-items: center;
-  background-color: #1588ca;
+  background-color: #818181;
   padding: 10px 0;
   position: fixed;
   top: 0;
@@ -35,14 +35,14 @@ body{
 };
 
 .menu li a{
-  color: #ffffff;
+  color: #000000;
   text-decoration: none;
   padding: 10px 20px;
   display: block;
 }
 
 .menu li a:hover{
-  background-color: #0d86cc;
+  background-color: #777777;
   color: #000000;
 }
 
